k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: eve-kill
    namespace: eve-kill
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt
        nginx.ingress.kubernetes.io/ssl-redirect: "true"
        nginx.ingress.kubernetes.io/backend-protocol: "http"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
        nginx.ingress.kubernetes.io/enable-compression: "true"
        nginx.ingress.kubernetes.io/configuration-snippet: |
            proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_set_header X-Forwarded-Proto $scheme;
            proxy_set_header X-Forwarded-Host $host;
        nginx.ingress.kubernetes.io/location-snippets: |
            location /killmails {
              proxy_set_header Upgrade "websocket";
              proxy_set_header Connection "Upgrade";
            }
        nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
        nginx.ingress.kubernetes.io/proxy-real-ip-cidr: "0.0.0.0/0"
spec:
    ingressClassName: nginx
    tls:
      - hosts:
          - eve-kill.com
        secretName: evekill-tls
    rules:
      - host: eve-kill.com
        http:
            paths:
              - path: /
                pathType: Prefix
                backend:
                    service:
                        name: thessia
                        port:
                            number: 3000
